[Updated] Controller with its API of URL Shorten.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=5287
 BASE_URL=http://localhost:5287
+TZ=Asia/Phnom_Penh
 
 # Database Configuration
 DB_DRIVER=postgres
@@ -27,3 +28,7 @@ RABBIT_PASSWORD=root
 # Dynamic Configuration; with FALSE and '0 */10 * * * *' are set as default
 REFRESHING_CONFIG_ENABLED=true
 REFRESHING_CONFIG_CRON_TIME='*/15 * * * * *'
+
+# Check Token Configuration
+AUTH_BASE_URL=http://localhost:8500/
+AUTH_ENDPOINT=tokeninfo
