--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url-shortener",
+  "name": "deeplink-service",
   "version": "0.0.1",
   "description": "URL Shortener API with NestJS and TypeORM with PostgreSQL database and Redis cache manager for caching and cron job for deleting expired URLs",
   "author": "pouth.nadin",
@@ -31,10 +31,12 @@
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "cache-manager": "^6.4.1",
+    "class-validator": "^0.14.1",
     "cron": "^3.5.0",
     "nanoid": "^5.1.4",
-    "pg": "^8.14.0",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.21",
     "url-exist": "^3.0.1"
@@ -46,7 +48,7 @@
     "@nestjs/schematics": "^11.0.2",
     "@nestjs/testing": "^11.0.11",
     "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.11.9",
+    "@swc/core": "^1.11.11",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
