--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ababank/auth": "^1.4.0",
     "@keyv/compress-gzip": "^2.0.2",
     "@keyv/redis": "^4.3.2",
     "@nestjs/cache-manager": "^3.0.0",
@@ -31,8 +32,11 @@
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "cache-manager": "^6.4.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.8.0",
     "cron": "^3.5.0",
+    "helmet": "^8.1.0",
     "nanoid": "^5.1.4",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
