- [Added] GRPC Microservice with the port as Restful with Create a new deeplink. - [Fixed] Create a new deeplink and Read a not found URL.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ PORT=5287
 BASE_URL=http://localhost:5287
 TZ=Asia/Phnom_Penh
 
+# GRPC Configuration
+GRPC_ENABLED=true
+
 # Database Configuration
 DB_DRIVER=postgres
 DB_HOST=localhost
@@ -20,6 +23,7 @@ REDIS_USERNAME=
 REDIS_PASSWORD=root
 
 # Rabbit Configuration
+RABBIT_ENABLED=false
 RABBIT_HOST=localhost
 RABBIT_PORT=5672
 RABBIT_USER=admin
