--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "compression": "^1.8.0",
     "cron": "^4.3.0",
     "helmet": "^8.1.0",
+    "lodash": "^4.17.21",
     "nanoid": "^5.1.5",
     "pg": "^8.16.0",
+    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.2",
